Added button for resume

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,27 @@ p {
     margin-top: 20px;
 }
 
+.button-two {
+    width: 200px;
+    height: 55px;
+    border-radius: 30px;
+    background-color: coral;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 300;
+    padding-top: 5px;
+    margin-top: 20px;
+}
+
+.button-two:hover {
+    background-color: #ef744b;
+}
+
+.button-two:active {
+    background-color: #A9A9A9;
+    color: #808080;
+}
+
 .button:hover {
     background-color: #ef744b;
 }
